# dotnet-quality-enforcer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  action.yml  action_runner.py  constraints-ci.txt  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  package.yml  release-please.yml
examples/starter/: README.md
examples/starter/.github/workflows/: dotnet-quality.yml
examples/starter/.quality/: quality_policy.json
examples/starter/src/Example/: Calculator.cs
src/dotnet_quality_gates/: __init__.py  cli.py  context.py  policy.py  reporting.py  subprocess_utils.py
src/dotnet_quality_gates/coverage/: check_diff_coverage.py  check_repo_coverage.py  generate_coverage_report.py
src/dotnet_quality_gates/quality/: check_architectural_boundaries.py  check_code_size.py  check_diff_complexity.py  check_namespace_layout.py  check_public_api_documentation.py  check_source_type_layout.py  check_test_architecture.py  check_test_conventions.py  common.py
src/dotnet_quality_gates/unit_test_conventions/: __init__.py  constants.py  discovery.py  models.py  parsing.py  policy.py  roslyn.py  validation.py
tests/: helpers.py  test_action_runner.py  test_check_architectural_boundaries.py  test_check_code_size.py  test_check_diff_complexity.py  test_check_diff_coverage.py  test_check_namespace_layout.py  test_check_public_api_documentation.py  test_check_repo_coverage.py  test_check_source_type_layout.py  test_check_test_architecture.py  test_check_test_conventions.py  test_cli.py  test_context.py  test_coverage_report.py  test_policy.py  test_reporting.py  test_roslyn.py
tools/roslyn-analyzer/: DotnetQualityRoslyn.csproj  Program.cs
