[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dotnet-quality-gates"
dynamic = ["version"]
description = "Configurable static quality and coverage gates for C#/.NET repositories."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "KaramTNC" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/KaramTNC/dotnet-quality-enforcer"
Repository = "https://github.com/KaramTNC/dotnet-quality-enforcer"
Issues = "https://github.com/KaramTNC/dotnet-quality-enforcer/issues"
Changelog = "https://github.com/KaramTNC/dotnet-quality-enforcer/releases"

[project.optional-dependencies]
dev = [
    "coverage>=7.6",
    "mypy>=1.13",
    "ruff>=0.8",
]
security = [
    "pip-audit>=2.7",
]

[project.scripts]
dotnet-quality = "dotnet_quality_gates.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["src/dotnet_quality_gates"]

[tool.coverage.report]
fail_under = 60
skip_empty = true
